<resources>
    <string name="app_name">Univeo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up2"><u>Sign up</u></string>
    <string name="terms_and_cond2"><u>Terms &amp; Conditions</u></string>
    <string name="login2"><u>Login</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="abdo">Abdo</string>
    <string name="more">More</string>
    <string name="a">A</string>
    <string name="abdelrahman_ghanam">Abdelrahman Ghanam</string>
    <string name="cairo">Cairo</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="major_test">Major test</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="details">Details</string>
    <string name="explore">Explore</string>
    <string name="universities_recommendations">Universities Recommendations</string>
    <string name="latest_news">Latest News</string>
    <string name="major_test_cap">Major Test</string>
    <string name="a_test_that_uses_some_machine_learning_techniques_that_uses_your_answers_on_the_test_to_decide_what_majors_fits_your_answers">A test that uses some machine learning techniques that uses your answers on the test to decide what majors fits your answers</string>
    <string name="get_started">Get Started</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="matching">Matching</string>
    <string name="university_of_prince_edward_island">University of Prince Edward Island</string>
    <string name="major_of_science">Major of Science</string>
    <string name="faculty_of_science">Faculty of Science</string>
    <string name="_0">0</string>
    <string name="years">years</string>
    <string name="annually">annually</string>
    <string name="global">global</string>
    <string name="vivamus_efficitur_vestibulum_elit_id_semper_donec_eleifend_metus_justo_ac_luctus_arcu_finibus_non_phasellus_dignissim_diam_ac_ipsum_egestas_malesuada_non_mollis_metus_aenean_luctus_ex_sit_amet_elementum_tincidunt_duis">Vivamus efficitur vestibulum elit id semper. Donec eleifend metus justo, ac luctus arcu finibus non. Phasellus dignissim diam ac ipsum egestas malesuada non mollis metus. Aenean luctus ex sit amet elementum tincidunt. Duis</string>
    <string name="brief">Brief</string>
    <string name="faculties">Faculties</string>
    <string name="fees">Fees</string>
    <string name="duration">Duration</string>
    <string name="dollarSign">$</string>
    <string name="majors">Majors</string>
    <string name="_190_000">190,000</string>
    <string name="_4">4</string>
    <string name="video_game_development">Video game development</string>
    <string name="choice1">choice1</string>
    <string name="choice2">choice2</string>
    <string name="choice3">choice3</string>
    <string name="i_agree_on_terms_and_conditions">I agree on</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="city">city</string>
    <string name="reset_password">Reset password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="accept">Accept</string>
    <string name="decline">Reject</string>
    <string name="long_message">Our Terms and conditions will be shown here in the future </string>
    <string name="app_descriptions">Univeo is an online platform that acts as an exhibition for Egyptian universities. It shows all details of universities located in Egypt just as majors, fees, location, facilities and world rank. Users can search the universities using some entered features. It will contain some machine learning techniques to determine the best major match best on user answers for application premade test..</string>
    <string name="app_description">App description</string>
    <string name="versionz">Version:</string>
    <string name="_1_0">1.0</string>
    <string name="max_budget">Max budget</string>
    <string name="use_my_city">Use my city</string>
    <string name="there_are_no_results_found">There are no results found</string>
    <string name="unable_to_detect_best_matching_faculty">Unable to detect best matching faculty</string>
</resources>