<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/rectangle_rounded_corners">

    <ImageView
        android:id="@+id/ic_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_question_answer_24"
        tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ic_rank"
        app:layout_constraintStart_toEndOf="@+id/ic_rank"
        app:layout_constraintTop_toTopOf="@+id/ic_rank"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <RadioButton
            android:id="@+id/choice1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice1"
            android:buttonTint="@color/design_orange"
            />

        <RadioButton
            android:id="@+id/choice2_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice2"
            android:buttonTint="@color/design_orange"
            />

        <RadioButton
            android:id="@+id/choice3_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice3"
            android:buttonTint="@color/design_orange"
            />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>